# grist-ai-tools

./: .gitignore  README.md
src/grist-mcp-server/: .env.example  README.md  pyproject.toml  requirements.txt
src/grist-mcp-server/docs/: API_REFERENCE.md
src/grist-mcp-server/grist_mcp_server/: client.py  server.py
src/grist-openai-plugin/: .env.example  README.md  pyproject.toml  requirements.txt
src/grist-openai-plugin/docs/: API_REFERENCE.md
src/grist-openai-plugin/grist_openai_plugin/: client.py  main.py  models.py
