[project]
name = "grist-mcp-server"
version = "0.1.0"
description = "MCP server exposing the Grist REST API (orgs, workspaces, docs, tables, records, SQL) to Claude and other MCP clients."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
grist-mcp-server = "grist_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grist_mcp_server"]
