[project]
name = "grist-openai-plugin"
version = "0.1.0"
description = "GPT Action (OpenAPI) server exposing the Grist REST API for use as a Custom GPT tool in ChatGPT."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
grist-openai-plugin = "grist_openai_plugin.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grist_openai_plugin"]
